integraçao com o react